# esp32-distance

./: .buildinfo  .gitignore  .pre-commit-config.yaml  404.html  CMakeLists.txt  README.md  VERSION.md  genindex.html  index.html  needs.json  objects.inv  schema_violations.json  sdkconfig  search.html  searchindex.js
.devcontainer/: Dockerfile  README.md  devcontainer.json
.doctrees/: index.doctree
.github/: copilot-instructions.md
.syspilot/: version.json
01_overview/: hardware.html  index.html  introduction.html  quick-start.html
05_workshop/: exercises.html  getting-started.html  hardware-setup.html  index.html  prerequisites.html
10_userstories/: index.html  us_developer.html  us_display.html  us_reliable.html  us_setup.html
11_requirements/: index.html  req_config_manager_json.html  req_developer_docs.html  req_display.html  req_distance_sensor.html  req_led_controller.html  req_netif_tunnel.html  req_startup_test.html  req_system.html  req_web_server.html
12_design/: index.html  spec_config_manager_json.html  spec_config_webpage.html  spec_dev_environment.html  spec_developer_docs.html  spec_display.html  spec_distance_sensor.html  spec_high_level_architecture.html  spec_known_limitations.html  spec_led_controller.html  spec_netif_tunnel.html  spec_startup_test.html  spec_web_server.html
21_api/: api_cert_handler.html  api_config_manager.html  api_display_logic.html  api_distance_sensor.html  api_led_controller.html  api_netif_uart_tunnel.html  api_startup_tests.html  api_web_server.html  api_wifi_manager.html  index.html
31_traceability/: index.html
90_guides/: debugging.html  devcontainer.html  index.html  known-issues.html  pre-commit-hooks.html  qemu-emulator.html  qemu-network-internals.html  switching-dev-modes.html  web-flasher.html
_images/: needflow-02e54ccdb9790addc64d9e2e5e0b9207efe87e36.png.map  needflow-03ef7244abbb9a046b66c3c8a04837ae57a37418.png.map  needflow-04c46ab5749dbfc38aa131e80b1512a9b6e1bead.png.map  needflow-06e4a36feb0e998ed26b214c7342cb1b9fbfc3c5.png.map  needflow-1592b793cb45fcc17fd7bc6b0e1d1eb8977e10b0.png.map  needflow-2a70a755d6d730d9874ff4f6cc09bddf38d58529.png.map  needflow-2ef2231f7700b5deaf9c47a1b3ed3c7ea0e50cc9.png.map  needflow-30740693f03964b31e413b1e5659109971d0b43d.png.map  needflow-444d9520e6b44562e47e5d068af189be2c5f3055.png.map  needflow-4a10b1290ae11f018373a8a4ff0aa67bf5fb9dc7.png.map  needflow-51b785d11a99538b9c8e62ebd347b072ce5107b5.png.map  needflow-633a462b1f412eba02e144f44ec90f21c01ebecd.png.map  needflow-695401a0d15644268b5c1bd68ca441ffdd535021.png.map  needflow-6f2e83f5853846ce66a6207ff8f68cec90eb1f86.png.map  needflow-749942d5e9b8e5d9170db9abef8ded1cd98a6936.png.map  needflow-9f09641ad91185e235587835f06258b57c28aa0d.png.map  needflow-b48a14f1920de1e8326845c66398bca6e3521d48.png.map  needflow-b665b18849264b1cf0ba2da5cbee96245c634a8c.png.map  needflow-b9121b17f4d0fc517593e92e3f96fbb42aa7a245.png.map  needflow-ba65536b5f8a13cb2668365744ffbde7371900ae.png.map  needflow-c0f3a656817083dd24c92fd94ffbb6dda4cd6917.png.map  needflow-c4691cca8a3b954be26b131462e161906c190076.png.map  needflow-c536bd669dccb2437f992a025f942051ba2b0044.png.map  needflow-d95e90a49f1dce077090245d97dd34d45c7dc7c6.png.map
_sources/: index.rst.txt
api/: index.html
architecture/: index.html
changes/: developer-us.html  doc-consistency.html  netif-tunnel-spec.html
development/: index.html
docs/: conf.py  index.rst  requirements.txt  ubproject.toml
emulator-support/: index.html
esp32-codespace-debug-bridge/: .gitignore  README.md  start.sh
known-limitations/: index.html
legal/: datenschutz.html  impressum.html
main/: CMakeLists.txt  Kconfig.projbuild  config.h  main.c  web_server.c  web_server.h
main/components/cert_handler/: CMakeLists.txt  README.md
main/components/config_manager/: CMakeLists.txt  config_factory_generated.c  config_manager.c  config_manager.h  config_schema.json
main/components/display_logic/: CMakeLists.txt  display_logic.c  display_logic.h
main/components/distance_sensor/: CMakeLists.txt  distance_sensor.c  distance_sensor.h  distance_sensor_sim.c
main/components/led_controller/: CMakeLists.txt  led_controller.c  led_controller.h  led_controller_sim.c
main/components/netif_uart_tunnel/: CMakeLists.txt  README.md  netif_uart_tunnel_sim.h
main/components/startup_tests/: led_running_test.h
main/components/temp_sensor/: CMakeLists.txt  temp_sensor.c  temp_sensor.h  temp_sensor_sim.c
main/components/web_server/: CMakeLists.txt  web_server.c  web_server.h  wifi_manager.c  wifi_manager.h
main/components/web_server/www/: index.html  settings.html  wifi-setup.html
main/components/web_server/www/css/: style.css
main/components/web_server/www/js/: app.js
main/www/: wifi-setup.html
needs_id/: API_COMP_CERT_HANDLER.json  API_COMP_CONFIG_MANAGER.json  API_COMP_DISPLAY_LOGIC.json  API_COMP_DISTANCE_SENSOR.json  API_COMP_LED_CONTROLLER.json  API_COMP_NETIF_TUNNEL.json  API_COMP_STARTUP_TESTS.json  API_COMP_WEB_SERVER.json  API_COMP_WIFI_MGR.json  API_FUNC_CERT_HANDLER_GET_CA_CERT.json  API_FUNC_CERT_HANDLER_GET_INFO.json  API_FUNC_CERT_HANDLER_GET_SERVER_CERT.json  API_FUNC_CERT_HANDLER_GET_SERVER_KEY.json  API_FUNC_CERT_HANDLER_INIT.json  API_FUNC_CONFIG_COMMIT.json  API_FUNC_CONFIG_FACTORY_RESET.json  API_FUNC_CONFIG_GET_ALL_AS_JSON.json  API_FUNC_CONFIG_GET_BOOL.json  API_FUNC_CONFIG_GET_INT16.json  API_FUNC_CONFIG_GET_INT32.json  API_FUNC_CONFIG_GET_SCHEMA_JSON.json  API_FUNC_CONFIG_GET_STRING.json  API_FUNC_CONFIG_INIT.json  API_FUNC_CONFIG_SET_ALL_FROM_JSON.json  API_FUNC_CONFIG_SET_BOOL.json  API_FUNC_CONFIG_SET_BOOL_NO_COMMIT.json  API_FUNC_CONFIG_SET_INT16.json  (+281 more)
tools/: README.md
(+252 files in other folders)
